# FlashLang

./: .gitignore  main.py  pyproject.toml
data/: Les 22 - De nederlandse bevolking.csv  Les 22.csv  Les 23 - Op de helft.csv  Les 26 - De politie: (niet) m'n beste vriend.csv  Les 27 - Feest vieren.csv  Les 30 - Werk.csv  Les 35 - Gelukkige kinderen.csv  Les 36 - De twaalf provincies.csv  Les 37 - De gemeente.csv  Les 38 - Een beter klimaat begint bij jezelf.csv  Les 39 - Politiek.csv  Les 40 - De tijden zijn veranderd.csv  Les 41 - Mijn leven in Nederland.csv
data/Groene Boek/: Les 24 - Trouwen, samenwonen of liever alleen blijven.csv  Les 25 - De kaart van Nederland.csv  Les 28 - De Randstad.csv  Les 29 - Vrije tijd.csv  Les 31 - Blijf gezond.csv  Les 32 - Mooi Nederland.csv  Les 33 - De papieren.csv  Les 34 - Van republiek naar koninkrijk.csv  Les 42 - De laatste les.csv
data/NieuwsHuur/: 'Overheid moet meer investeren om warmtenetten betaalbaar te maken'.csv
data/Tweede Ronde/: Les 1 - Geachte Cursist.csv  Les 2 - Nederland, waar ligt dat eigenlijk.csv  Les 3 - Een dagje Amsterdam.csv  Les 4 - Het rijtjeshuis.csv  Les 5 - Hoe leer je een taal.csv  Les 6 - Op het platteland.csv
src/: data_handler.py  llm_service.py  translation_service.py  ui.py
src/services/: data_handler.py
src/ui/: flashcard.py  gap_test.py  input_data.py  main_menu.py  practice.py  writing_assignment.py
