[tool.poetry]
name = "flashlang"
version = "0.1.0"
description = "App for learning vocabulary of a new language"
authors = ["Emils Sipols <esipols@surveymonkey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.7.2"
pandas = "^2.2.2"
translate = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
